# wqn-mono

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/.cargo/: config.toml
backend/.claude/skills/core-actionbook/: SKILL.md
backend/.claude/skills/core-agent-browser/: SKILL.md
backend/.claude/skills/core-dynamic-skills/: SKILL.md
backend/.claude/skills/core-fix-skill-docs/: SKILL.md
backend/docs/: local-storage-operations.md
backend/migrations/: 20260612000100_initial_schema.sql  20260621000100_seed_registration_setting.sql
backend/scripts/: docker-dev.sh  smoke-db.sh  smoke.sh  storage-backup.sh  storage-cleanup-orphans.sh
backend/src/: auth.rs  cli.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  openapi.rs  response.rs  state.rs
backend/src/dto/: admin.rs  mod.rs  patch.rs  problem.rs  problem_set.rs  statistics.rs
backend/src/routes/: admin.rs  ai.rs  attempts.rs  auth.rs  files.rs  insights.rs  misc.rs  mod.rs  problem_sets.rs  problems.rs  profile.rs  qr.rs  review_sessions.rs  subjects.rs  tags.rs  usage.rs
backend/src/services/: accounts.rs  admin.rs  cleanup.rs  content_limits.rs  gemini.rs  insights.rs  limits_config.rs  misc.rs  mod.rs  password.rs  problem_filters.rs  problem_sets.rs  problems.rs  quota.rs  review.rs  storage.rs
backend/tests/: cleanup_safety.rs  http_db_integration.rs  p0_api_tests.rs
backend/tests/common/: mod.rs
frontend/: .gitattributes  .gitignore
twa/: README.md  (+1 more)
(+313 files in other folders)
